# robotprogramming_2021_22

exercises/rp_01_compilers_and_build_systems/: README.md
exercises/rp_01_compilers_and_build_systems/exercise/mini_core/: CMakeLists.txt
exercises/rp_01_compilers_and_build_systems/solution/mini_core/: CMakeLists.txt
exercises/rp_01_compilers_and_build_systems/solution/mini_core/executables/: CMakeLists.txt
exercises/rp_01_compilers_and_build_systems/solution/mini_core/src/: CMakeLists.txt
source/rp_02_cpp_intro/: 01_references.cpp  vec_f.cpp
